--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
   "devDependencies": {
     "istanbul": "^0.4.5",
     "jasmine": "^2.5.3",
-    "pretty-seconds": "^0.2.1",
+    "pretty-seconds": "^0.2.1"
   }
 }
