--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,4 @@ cache:
 script: 
     - npm test
     - npm run cover
+after_script: "npm install coveralls@2.10.0 && cat ./coverage/lcov.info | coveralls"
